--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,69 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ffmpeg version 6.0 Copyright (c) 2000-2023 the FFmpeg developers\n",
-      "  built with Apple clang version 15.0.0 (clang-1500.0.40.1)\n",
-      "  configuration: --prefix=/opt/homebrew/Cellar/ffmpeg/6.0_1 --enable-shared --enable-pthreads --enable-version3 --cc=clang --host-cflags= --host-ldflags='-Wl,-ld_classic' --enable-ffplay --enable-gnutls --enable-gpl --enable-libaom --enable-libaribb24 --enable-libbluray --enable-libdav1d --enable-libjxl --enable-libmp3lame --enable-libopus --enable-librav1e --enable-librist --enable-librubberband --enable-libsnappy --enable-libsrt --enable-libsvtav1 --enable-libtesseract --enable-libtheora --enable-libvidstab --enable-libvmaf --enable-libvorbis --enable-libvpx --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libxvid --enable-lzma --enable-libfontconfig --enable-libfreetype --enable-frei0r --enable-libass --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libspeex --enable-libsoxr --enable-libzmq --enable-libzimg --disable-libjack --disable-indev=jack --enable-videotoolbox --enable-audiotoolbox --enable-neon\n",
-      "  libavutil      58.  2.100 / 58.  2.100\n",
-      "  libavcodec     60.  3.100 / 60.  3.100\n",
-      "  libavformat    60.  3.100 / 60.  3.100\n",
-      "  libavdevice    60.  1.100 / 60.  1.100\n",
-      "  libavfilter     9.  3.100 /  9.  3.100\n",
-      "  libswscale      7.  1.100 /  7.  1.100\n",
-      "  libswresample   4. 10.100 /  4. 10.100\n",
-      "  libpostproc    57.  1.100 / 57.  1.100\n",
-      "Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'files/video.mp4':\n",
-      "  Metadata:\n",
-      "    major_brand     : mp42\n",
-      "    minor_version   : 0\n",
-      "    compatible_brands: isommp42\n",
-      "    creation_time   : 2023-08-16T08:47:43.000000Z\n",
-      "  Duration: 01:14:28.36, start: 0.000000, bitrate: 181 kb/s\n",
-      "  Stream #0:0[0x1](und): Video: h264 (Main) (avc1 / 0x31637661), yuv420p(tv, bt709, progressive), 640x360 [SAR 1:1 DAR 16:9], 49 kb/s, 30 fps, 30 tbr, 15360 tbn (default)\n",
-      "    Metadata:\n",
-      "      creation_time   : 2023-08-16T08:47:43.000000Z\n",
-      "      handler_name    : ISO Media file produced by Google Inc. Created on: 08/16/2023.\n",
-      "      vendor_id       : [0][0][0][0]\n",
-      "  Stream #0:1[0x2](und): Audio: aac (LC) (mp4a / 0x6134706D), 44100 Hz, stereo, fltp, 127 kb/s (default)\n",
-      "    Metadata:\n",
-      "      creation_time   : 2023-08-16T08:47:43.000000Z\n",
-      "      handler_name    : ISO Media file produced by Google Inc. Created on: 08/16/2023.\n",
-      "      vendor_id       : [0][0][0][0]\n",
-      "Stream mapping:\n",
-      "  Stream #0:1 -> #0:0 (aac (native) -> mp3 (libmp3lame))\n",
-      "Press [q] to stop, [?] for help\n",
-      "Output #0, mp3, to 'files/audio.mp3':\n",
-      "  Metadata:\n",
-      "    major_brand     : mp42\n",
-      "    minor_version   : 0\n",
-      "    compatible_brands: isommp42\n",
-      "    TSSE            : Lavf60.3.100\n",
-      "  Stream #0:0(und): Audio: mp3, 44100 Hz, stereo, fltp (default)\n",
-      "    Metadata:\n",
-      "      creation_time   : 2023-08-16T08:47:43.000000Z\n",
-      "      handler_name    : ISO Media file produced by Google Inc. Created on: 08/16/2023.\n",
-      "      vendor_id       : [0][0][0][0]\n",
-      "      encoder         : Lavc60.3.100 libmp3lame\n",
-      "size=   69819kB time=01:14:28.35 bitrate= 128.0kbits/s speed= 149x       \n",
-      "video:0kB audio:69819kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.000483%\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4468.355192743764"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import subprocess\n",
+    "from pydub import AudioSegment\n",
     "\n",
     "def extract_audio_from_video(vidoe_path, audio_path):\n",
     "  command = [\"ffmpeg\", \"-i\", vidoe_path, \"-vn\", audio_path]\n",
     "  subprocess.run(command)\n",
     "\n",
-    "extract_audio_from_video(\"files/video.mp4\", \"files/audio.mp3\")"
+    "# extract_audio_from_video(\"files/video.mp4\", \"files/audio.mp3\")\n",
+    "\n",
+    "track = AudioSegment.from_mp3(\"./files/audio.mp3\")\n",
+    "track.duration_seconds\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "ten_minutes = 10 * 60 * 1000\n",
+    "chunk = math.ceil(len(track) / ten_minutes)\n",
+    "\n",
+    "for i in range(chunk):\n",
+    "  start_time = i * ten_minutes\n",
+    "  end_time = (i+1) * ten_minutes\n",
+    "  chunk = track[start_time:end_time]\n",
+    "  chunk.export(f\"./files/chunks/chunk_{i}.mp3\")"
    ]
   }
  ],
