--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,50 +2,226 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='The total cost is $5,467.38.')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import subprocess\n",
-    "from pydub import AudioSegment\n",
-    "import math\n",
+    "from langchain.chat_models import ChatOpenAI\n",
     "\n",
-    "def extract_audio_from_video(vidoe_path, audio_path):\n",
-    "  command = [\"ffmpeg\", \"-i\", vidoe_path, \"-vn\", audio_path]\n",
-    "  subprocess.run(command)\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "# extract_audio_from_video(\"files/video.mp4\", \"files/audio.mp3\")\n",
+    "prompt = \"Cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12\"\n",
     "\n",
-    "def cut_audio_in_chunks(audio_path, chunk_size_in_minute, chunks_path, offset_in_sec):\n",
-    "  track = AudioSegment.from_mp3(audio_path)\n",
-    "  chunk_len = chunk_size_in_minute * 60 * 1000\n",
-    "  chunk= math.ceil(len(track) / chunk_len)\n",
-    "  for i in range(chunk):\n",
-    "    start_time = (offset_in_sec*1000) + (i * chunk_len)\n",
-    "    end_time = (offset_in_sec*1000) + ((i+1) * chunk_len)\n",
-    "    chunk = track[start_time:end_time]\n",
-    "    chunk.export(f\"./{chunks_path}/chunk_{i}.mp3\", format=\"mp3\")\n",
-    "\n",
-    "cut_audio_in_chunks(\"./files/audio.mp3\", 10, \"files/chunks\", 88)\n"
+    "llm.invoke(prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mTo calculate the sum of these numbers, I can use the Sum_Calculator tool. Let me do that for you.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 355.39,\n",
+      "    \"b\": 924.87\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m1280.26\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first two numbers to be 1280.26. Now I will continue to calculate the sum of the remaining numbers.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 1280.26,\n",
+      "    \"b\": 721.2\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m2001.46\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first three numbers to be 2001.46. Now I will continue to calculate the sum of the remaining numbers.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 2001.46,\n",
+      "    \"b\": 1940.29\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m3941.75\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first four numbers to be 3941.75. Now I will continue to calculate the sum of the remaining numbers.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 3941.75,\n",
+      "    \"b\": 573.63\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m4515.38\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first five numbers to be 4515.38. Now I will continue to calculate the sum of the remaining numbers.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 4515.38,\n",
+      "    \"b\": 65.72\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m4581.1\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first six numbers to be 4581.1. Now I will continue to calculate the sum of the remaining numbers.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 4581.1,\n",
+      "    \"b\": 35.0\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m4616.1\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first seven numbers to be 4616.1. Now I will continue to calculate the sum of the remaining numbers.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 4616.1,\n",
+      "    \"b\": 552.0\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m5168.1\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first eight numbers to be 5168.1. Now I will continue to calculate the sum of the remaining numbers.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 5168.1,\n",
+      "    \"b\": 76.16\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m5244.26\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first nine numbers to be 5244.26. Now I will calculate the sum of the last number.\n",
+      "\n",
+      "Action: \n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum_Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 5244.26,\n",
+      "    \"b\": 29.12\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\n",
+      "\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m5273.38\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of all the numbers to be 5273.38. \n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Final Answer\",\n",
+      "  \"action_input\": \"The sum of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12 is $5273.38.\"\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'Cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12',\n",
+       " 'output': 'The sum of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12 is $5273.38.'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import openai\n",
-    "import glob\n",
+    "from langchain.agents import initialize_agent, AgentType\n",
+    "from langchain.tools import StructuredTool\n",
     "\n",
-    "def transcript_chunks(chunk_path, dest):\n",
-    "  files = glob.glob(f\"{chunk_path}/*.mp3\")\n",
-    "  for file in files:\n",
-    "    with open(file, \"rb\") as audio_file, open(dest, \"a\") as text_file:\n",
-    "      transcript = openai.Audio.transcribe(\"whisper-1\", audio_file)\n",
-    "      text_file.write(transcript[\"text\"])\n",
+    "def plus(a,b):\n",
+    "  return a+b\n",
     "\n",
-    "transcript_chunks(\"./files/chunks\", \"./files/transcript.txt\")"
+    "agent = initialize_agent(\n",
+    "  llm=llm, \n",
+    "  verbose=True,\n",
+    "  agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
+    "  tools=[StructuredTool.from_function(func=plus, name=\"Sum_Calculator\", description=\"Use this to perform sums of two numbers. This tool take two arguments, both should be numbers.\",)],\n",
+    ")\n",
+    "\n",
+    "agent.invoke(prompt)"
    ]
   }
  ],
